fix: update dependencies to support `@wordpress/scripts` (#209)
* fix: update dependencies to avoid conflict in WP 6.6

* refactor: format JS

* fix: avoid peer dependency errors during npm install

* chore: fix JS unit test script

* chore: update CI config

* Revert "chore: update CI config"

This reverts commit 40624a68f13ec4fe91f2574665ba591ec88c0681.

* fix: move devDependencies to dependencies

* fix: downgrade semantic-release back to v19

* fix: peer dependency conflicts with @wordpress/* packages

* fix: script updates needed for newspack-theme repo

* refactor: use proxy script for eslint and stylelint scripts

* chore: production env for semantic-release; development for everything else

* chore: relative path for node_modules

* fix: fix peer dependency conflict

* fix: peer dependencies

* fix: peer dependencies

* feat: remove ajv dependency

* fix: proxy scripts and configs

* fix: remove proxy script; combine wp-scripts into one

* fix: add semantic-release script

* fix: add /vendor to eslint ignore patterns

* fix: temporarily disable SCSS linting as a build requirement

* chore: disable max-line-length stylelint rule

* fix: add react to list of globally available packages in ESLint

* fix: add stylelint dependency

* fix: downgrade stylelint to v14.*

* docs: remove out-of-date section

* docs: re-add missing newline in readme

* docs: update stylelint section

* fix: prettier dependency

* docs: update README

---------

Co-authored-by: Adam Cassis <adam.cassis@automattic.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           command: node --version
       - run:
           name: install
-          command: npm install
+          command: npm install --legacy-peer-deps
       - run:
           name: release
           command: npm run semantic-release || true
