--- a/src/jobs/lint-js-scss.yml
+++ b/src/jobs/lint-js-scss.yml
@@ -1,5 +1,5 @@
 description: >
-  Lint the JS & SCSS files.
+  Lint the JS & SCSS (temporarily skipped) files.
 
 executor: default
 
@@ -8,4 +8,4 @@ steps:
   - set_node_version
   - run:
       name: Run Linter
-      command: npm run lint
+      command: npm run lint:js # Temporarily skip linting SCSS due to stylelint config updates. Remove :js when ready to re-enable linting of SCSS.
